--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
             <!-- Right column to include the forecast -->
             <div class="col-md-9">
                 <div
-                    class="currentWeather text-center d-flex justify-content-center border bg-dark bg-opacity-80 text-white row">
+                    class="currentWeather text-center d-flex justify-content-cenrte border bg-dark bg-opacity-80 text-white row">
 
-                    <p>See Today's forecast </p>
+                    <h3 class="text-danger">See Today's forecast </h3>
                 </div>
-                <h2>Five Day Forecast:</h2>
+                <h2 class="text-danger bg-dark text-center">Five Day Forecast:</h2>
                 <div class="fiveDayWeather d-flex justify-content-around border row">
                     <h5 class="text-center">Enter City to display it's forecast</h5>
                 </div>
@@ -55,6 +55,11 @@
 
 
          <!-- script -->
+         
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"
+    integrity="sha512-qTXRIMyZIFb8iQcfjXWCO8+M5Tbc38Qi5WzdPOYZHIlZpzBHG3L3by84BBBOiRGiEb7KKtAOAs5qYdUiZiQNNQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="./assets/script.js"></script>
 </body>
   
 
