--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 
 <!-- body -->
-<body>
+<body class="bg-dark">
 
       <!-- title -->
 <h1 class="title text-center text-danger bg-dark">Weather Dashboard </h1>
@@ -28,7 +28,7 @@
                 <Form class="citySearch d-flex flex-column justify-content-center">
                     <h2>Search for a city:</h2>
                     <input class="text-center" type="text" id="city" name="city" placeholder="Enter City">
-                    <button class="submit-btn">Submit</button>
+                    <button class="btn btn-outline-danger ">Submit</button>
                 </Form>
                 <hr>
                 <div class="recentSearch d-flex flex-column bd-highlight mb-3">
